gdk-includes/include/gdk/gdk.h

/** A server session */
struct GA_session;
/** A Parsed JSON object */
typedef struct GA_json GA_json;
/** An api method call that potentially requires two factor authentication to complete */
struct GA_auth_handler;
/**
 * Free a session allocated by `GA_create_session`.
 *
 * :param session: The session to free.
 *
 * If the session was connected using `GA_connect` then this call will
 * disconnect it it before destroying it.
 */
GDK_API int GA_destroy_session(struct GA_session* session);
/**
 * Create a new user wallet.
 *
 * :param session: The session to use.
 * :param hw_device: :ref:`hw-device` or empty JSON for software wallet registration.
 * :param details: The :ref:`login-credentials` for software wallet registration.
 * :param call: Destination for the resulting GA_auth_handler to perform the registration.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameters ``hw_device`` and ``details`` will be emptied when the call
 *completes.
 */
GDK_API int GA_register_user(
    struct GA_session* session, GA_json* hw_device, GA_json* details, struct GA_auth_handler** call);
/**
 * Authenticate to a user's wallet.
 *
 * :param session: The session to use.
 * :param hw_device: :ref:`hw-device` or empty JSON for software wallet login.
 * :param details: The :ref:`login-credentials` for authenticating the user.
 * :param call: Destination for the resulting GA_auth_handler to perform the login.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * If a sessions underlying network connection has disconnected and
 * reconnected, the user will need to login again using this function. In
 * this case, the caller can pass empty JSON for both ``hw_device`` and
 * ``details`` to login using the previously passed credentials and device.
 *
 * .. note:: When calling from C/C++, the parameters ``hw_device`` and ``details`` will be emptied when the call
 *completes.
 */
GDK_API int GA_login_user(
    struct GA_session* session, GA_json* hw_device, GA_json* details, struct GA_auth_handler** call);
/**
 * Set or disable a watch-only login for a logged-in user wallet.
 *
 * :param session: The session to use.
 * :param username: The watch-only username to login with, or a blank string to disable.
 * :param password: The watch-only password to login with, or a blank string to disable.
 */
GDK_API int GA_set_watch_only(struct GA_session* session, const char* username, const char* password);
/**
 * Get the current watch-only login for a logged-in user wallet, if any.
 *
 * :param session: The session to use.
 * :param username: Destination for the watch-only username. Empty string if not set.
 *|     Returned string should be freed using `GA_destroy_string`.
 */
GDK_API int GA_get_watch_only_username(struct GA_session* session, char** username);
/**
 * Remove and delete the server history of a wallet.
 *
 * :param session: The session to use.
 * :param call: Destination for the resulting GA_auth_handler to perform the removal.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * For multisig Green sessions, removing a wallet removes all history and
 * data associated with the wallet on the server. This operation cannot be
 * undone, and re-registering the wallet will not bring back the wallet's
 * history. For this reason, only empty wallets can be deleted.
 *
 * For singlesig sessions, removing a wallet removes the locally persisted cache.
 * The actual removal will happen after `GA_destroy_session` is called.
 */
GDK_API int GA_remove_account(struct GA_session* session, struct GA_auth_handler** call);
/**
 * Create a subaccount.
 *
 * :param session: The session to use.
 * :param details: The subaccount ``"name"`` (which must not be already used in
 *|     the wallet) and ``"type"`` (either ``"2of2"``, ``"2of2_no_recovery"`` or ``"2of3"``) must be
 *|     populated. Type ``"2of2_no_recovery"`` is available only for Liquid networks and
 *|     always requires both keys for spending. For type ``"2of3"`` the caller may provide
 *|     either ``"recovery_mnemonic"`` or ``"recovery_xpub"`` if they do not wish to have a
 *|     mnemonic passphrase generated automatically.
 *|     All other fields are ignored.
 * :param call: Destination for the resulting GA_auth_handler to perform the creation.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *|     Details of the created subaccount are returned in the ``"result"`` element of
 *|     the GA_auth_handler. For 2of3 subaccounts the field ``"recovery_xpub"`` will
 *|     be populated, and ``"recovery_mnemonic"`` will contain the recovery mnemonic
 *|     passphrase if one was generated. These values must be stored safely by the
 *|     caller as they will not be returned again by any call such as `GA_get_subaccounts`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 */
GDK_API int GA_create_subaccount(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Get the user's subaccount details.
 *
 * :param session: The session to use.
 * :param details: the :ref:`get-subaccounts-params-data` controlling the request.
 * :param call: Destination for the resulting GA_auth_handler to perform the creation.
 *|     The call handlers result is :ref:`subaccount-list`.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 */
GDK_API int GA_get_subaccounts(struct GA_session* session, const GA_json* details, struct GA_auth_handler** call);
/**
 * Get subaccount details.
 *
 * :param session: The session to use.
 * :param subaccount: The value of ``"pointer"`` from :ref:`subaccount-list` for the subaccount.
 * :param call: Destination for the resulting GA_auth_handler to perform the creation.
 *|     The call handlers result is :ref:`subaccount-detail`.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 */
GDK_API int GA_get_subaccount(struct GA_session* session, uint32_t subaccount, struct GA_auth_handler** call);
/**
 * Update subaccount information.
 *
 * :param session: The session to use.
 * :param details: :ref:`subaccount-update` giving the details to update.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes
 */
GDK_API int GA_update_subaccount(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Get a page of the user's transaction history.
 *
 * :param session: The session to use.
 * :param details: :ref:`transactions-details` giving the details to get the transactions for.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 *
 * .. note:: Transactions are returned as :ref:`tx-list` from newest to oldest with up to 30 transactions per page.
 */
GDK_API int GA_get_transactions(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Get a new address to receive coins to.
 *
 * :param session: The session to use.
 * :param details: :ref:`receive-address-request`.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     The call handlers result is :ref:`receive-address-details`.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 */
GDK_API int GA_get_receive_address(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Free an auth_handler after use.
 *
 * :param call: The auth_handler to free.
 */
GDK_API int GA_destroy_auth_handler(struct GA_auth_handler* call);
/**
 * Free a string returned by the api.
 *
 * :param str: The string to free.
 */
GDK_API void GA_destroy_string(char* str);