lib/ffi/generated_bindings.dart


  /// Create a new user wallet.
  ///
  /// :param session: The session to use.
  /// :param hw_device: :ref:`hw-device` or empty JSON for software wallet registration.
  /// :param details: The :ref:`login-credentials` for software wallet registration.
  /// :param call: Destination for the resulting GA_auth_handler to perform the registration.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_register_user(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> hw_device,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_register_user(
      session,
      hw_device,
      details,
      call,
    );
  }

  late final _GA_register_userPtr =
      _lookup<ffi.NativeFunction<NativeGA_register_user>>('GA_register_user');
  late final _GA_register_user =
      _GA_register_userPtr.asFunction<DartGA_register_user>();

  /// Authenticate to a user's wallet.
  ///
  /// :param session: The session to use.
  /// :param hw_device: :ref:`hw-device` or empty JSON for software wallet login.
  /// :param details: The :ref:`login-credentials` for authenticating the user.
  /// :param call: Destination for the resulting GA_auth_handler to perform the login.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  ///
  /// If a sessions underlying network connection has disconnected and
  /// reconnected, the user will need to login again using this function. In
  /// this case, the caller can pass empty JSON for both ``hw_device`` and
  /// ``details`` to login using the previously passed credentials and device.
  int GA_login_user(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> hw_device,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_login_user(
      session,
      hw_device,
      details,
      call,
    );
  }

  late final _GA_login_userPtr =
      _lookup<ffi.NativeFunction<NativeGA_login_user>>('GA_login_user');
  late final _GA_login_user = _GA_login_userPtr.asFunction<DartGA_login_user>();

  /// Set or disable a watch-only login for a logged-in user wallet.
  ///
  /// :param session: The session to use.
  /// :param username: The watch-only username to login with, or a blank string to disable.
  /// :param password: The watch-only password to login with, or a blank string to disable.
  int GA_set_watch_only(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _GA_set_watch_only(
      session,
      username,
      password,
    );
  }

  late final _GA_set_watch_onlyPtr =
      _lookup<ffi.NativeFunction<NativeGA_set_watch_only>>('GA_set_watch_only');
  late final _GA_set_watch_only =
      _GA_set_watch_onlyPtr.asFunction<DartGA_set_watch_only>();

  /// Get the current watch-only login for a logged-in user wallet, if any.
  ///
  /// :param session: The session to use.
  /// :param username: Destination for the watch-only username. Empty string if not set.
  /// |     Returned string should be freed using `GA_destroy_string`.
  int GA_get_watch_only_username(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Pointer<ffi.Char>> username,
  ) {
    return _GA_get_watch_only_username(
      session,
      username,
    );
  }

  late final _GA_get_watch_only_usernamePtr =
      _lookup<ffi.NativeFunction<NativeGA_get_watch_only_username>>(
          'GA_get_watch_only_username');
  late final _GA_get_watch_only_username = _GA_get_watch_only_usernamePtr
      .asFunction<DartGA_get_watch_only_username>();

  /// Remove and delete the server history of a wallet.
  ///
  /// :param session: The session to use.
  /// :param call: Destination for the resulting GA_auth_handler to perform the removal.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  ///
  /// For multisig Green sessions, removing a wallet removes all history and
  /// data associated with the wallet on the server. This operation cannot be
  /// undone, and re-registering the wallet will not bring back the wallet's
  /// history. For this reason, only empty wallets can be deleted.
  ///
  /// For singlesig sessions, removing a wallet removes the locally persisted cache.
  /// The actual removal will happen after `GA_destroy_session` is called.
  int GA_remove_account(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_remove_account(
      session,
      call,
    );
  }

  late final _GA_remove_accountPtr =
      _lookup<ffi.NativeFunction<NativeGA_remove_account>>('GA_remove_account');
  late final _GA_remove_account =
      _GA_remove_accountPtr.asFunction<DartGA_remove_account>();

  /// Create a subaccount.
  ///
  /// :param session: The session to use.
  /// :param details: The subaccount ``"name"`` (which must not be already used in
  /// |     the wallet) and ``"type"`` (either ``"2of2"``, ``"2of2_no_recovery"`` or ``"2of3"``) must be
  /// |     populated. Type ``"2of2_no_recovery"`` is available only for Liquid networks and
  /// |     always requires both keys for spending. For type ``"2of3"`` the caller may provide
  /// |     either ``"recovery_mnemonic"`` or ``"recovery_xpub"`` if they do not wish to have a
  /// |     mnemonic passphrase generated automatically.
  /// |     All other fields are ignored.
  /// :param call: Destination for the resulting GA_auth_handler to perform the creation.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  /// |     Details of the created subaccount are returned in the ``"result"`` element of
  /// |     the GA_auth_handler. For 2of3 subaccounts the field ``"recovery_xpub"`` will
  /// |     be populated, and ``"recovery_mnemonic"`` will contain the recovery mnemonic
  /// |     passphrase if one was generated. These values must be stored safely by the
  /// |     caller as they will not be returned again by any call such as `GA_get_subaccounts`.
  int GA_create_subaccount(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_create_subaccount(
      session,
      details,
      call,
    );
  }

  late final _GA_create_subaccountPtr =
      _lookup<ffi.NativeFunction<NativeGA_create_subaccount>>(
          'GA_create_subaccount');
  late final _GA_create_subaccount =
      _GA_create_subaccountPtr.asFunction<DartGA_create_subaccount>();

  /// Get the user's subaccount details.
  ///
  /// :param session: The session to use.
  /// :param details: the :ref:`get-subaccounts-params-data` controlling the request.
  /// :param call: Destination for the resulting GA_auth_handler to perform the creation.
  /// |     The call handlers result is :ref:`subaccount-list`.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_get_subaccounts(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_get_subaccounts(
      session,
      details,
      call,
    );
  }

  late final _GA_get_subaccountsPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_subaccounts>>(
          'GA_get_subaccounts');
  late final _GA_get_subaccounts =
      _GA_get_subaccountsPtr.asFunction<DartGA_get_subaccounts>();

  /// Get subaccount details.
  ///
  /// :param session: The session to use.
  /// :param subaccount: The value of ``"pointer"`` from :ref:`subaccount-list` for the subaccount.
  /// :param call: Destination for the resulting GA_auth_handler to perform the creation.
  /// |     The call handlers result is :ref:`subaccount-detail`.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_get_subaccount(
    ffi.Pointer<GA_session> session,
    int subaccount,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_get_subaccount(
      session,
      subaccount,
      call,
    );
  }

  late final _GA_get_subaccountPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_subaccount>>('GA_get_subaccount');
  late final _GA_get_subaccount =
      _GA_get_subaccountPtr.asFunction<DartGA_get_subaccount>();

  /// Rename a subaccount.
  ///
  /// :param session: The session to use.
  /// :param subaccount: The value of ``"pointer"`` from :ref:`subaccount-list` or
  /// |                   :ref:`subaccount-detail` for the subaccount to rename.
  /// :param new_name: New name for the subaccount.
  ///
  /// .. note:: This call is deprecated and will be removed in a future release. Use
  /// |          `GA_update_subaccount` to rename subaccounts.
  int GA_rename_subaccount(
    ffi.Pointer<GA_session> session,
    int subaccount,
    ffi.Pointer<ffi.Char> new_name,
  ) {
    return _GA_rename_subaccount(
      session,
      subaccount,
      new_name,
    );
  }

  late final _GA_rename_subaccountPtr =
      _lookup<ffi.NativeFunction<NativeGA_rename_subaccount>>(
          'GA_rename_subaccount');
  late final _GA_rename_subaccount =
      _GA_rename_subaccountPtr.asFunction<DartGA_rename_subaccount>();

  /// Update subaccount information.
  ///
  /// :param session: The session to use.
  /// :param details: :ref:`subaccount-update` giving the details to update.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_update_subaccount(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_update_subaccount(
      session,
      details,
      call,
    );
  }

  late final _GA_update_subaccountPtr =
      _lookup<ffi.NativeFunction<NativeGA_update_subaccount>>(
          'GA_update_subaccount');
  late final _GA_update_subaccount =
      _GA_update_subaccountPtr.asFunction<DartGA_update_subaccount>();

  /// Get a page of the user's transaction history.
  ///
  /// :param session: The session to use.
  /// :param details: :ref:`transactions-details` giving the details to get the transactions for.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  ///
  /// .. note:: Transactions are returned from newest to oldest with up to 30 transactions per page.
  int GA_get_transactions(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_get_transactions(
      session,
      details,
      call,
    );
  }

  late final _GA_get_transactionsPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_transactions>>(
          'GA_get_transactions');
  late final _GA_get_transactions =
      _GA_get_transactionsPtr.asFunction<DartGA_get_transactions>();

  /// Get a new address to receive coins to.
  ///
  /// :param session: The session to use.
  /// :param details: :ref:`receive-address-details`.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_get_receive_address(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_get_receive_address(
      session,
      details,
      call,
    );
  }

  late final _GA_get_receive_addressPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_receive_address>>(
          'GA_get_receive_address');
  late final _GA_get_receive_address =
      _GA_get_receive_addressPtr.asFunction<DartGA_get_receive_address>();
